--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,11 +16,9 @@ jobs:
 
     steps:
       - name: Checkout the code
-        # uses: actions/checkout@v3
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9
 
       - name: Set up Oracle JDK 17.0.8
-        # uses: oracle-actions/setup-java@v1
         uses: oracle-actions/setup-java@1f72fc84c0ae0b8ac40bfa0cfb3935ac9a28ffb7
         with:
           website: oracle.com
@@ -36,11 +34,9 @@ jobs:
           arguments: check bootJar
 
       - name: Set up QEMU
-        # uses: docker/setup-qemu-action@v2
         uses: docker/setup-qemu-action@2b82ce82d56a2a04d2637cd93a637ae1b359c0a7
 
       - name: Set up Docker Buildx
-        # uses: docker/setup-buildx-action@v2
         uses: docker/setup-buildx-action@4c0219f9ac95b02789c1075625400b2acbff50b1
 
       - name: Log in to the Container registry
@@ -50,18 +46,14 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
       - name: Build and push Docker image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: .
+          version: 'v0.11.2'
           file: ./container/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: |
+            linux/amd64
+            linux/arm64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: 'latest'
