--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@4c0219f9ac95b02789c1075625400b2acbff50b1
+        with:
+          version: 'v0.11.2'
 
       - name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
@@ -48,12 +50,13 @@ jobs:
 
       - name: Build and push Docker image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+        env:
+          USERNAME: ${{ github.actor }}
         with:
           context: .
-          version: 'v0.11.2'
           file: ./container/Dockerfile
           platforms: |
             linux/amd64
             linux/arm64
           push: true
-          tags: 'latest'
+          tags: "ghcr.io/${USERNAME}/gourami-app:latest"
