Try to fix CI/CD

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,8 +50,6 @@ jobs:
 
       - name: Build and push Docker image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
-        env:
-          USERNAME: ${{ github.actor }}
         with:
           context: .
           file: ./container/Dockerfile
@@ -59,4 +57,4 @@ jobs:
             linux/amd64
             linux/arm64
           push: true
-          tags: "ghcr.io/${USERNAME}/gourami-app:latest"
+          tags: "ghcr.io/albertattard/gourami-app:latest"
