--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,13 +33,13 @@ jobs:
         with:
           arguments: check bootJar
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@2b82ce82d56a2a04d2637cd93a637ae1b359c0a7
+#      - name: Set up QEMU
+#        uses: docker/setup-qemu-action@2b82ce82d56a2a04d2637cd93a637ae1b359c0a7
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@4c0219f9ac95b02789c1075625400b2acbff50b1
-        with:
-          version: 'v0.11.2'
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@4c0219f9ac95b02789c1075625400b2acbff50b1
+#        with:
+#          version: v0.11.2
 
       - name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
@@ -53,8 +53,8 @@ jobs:
         with:
           context: .
           file: ./container/Dockerfile
-          platforms: |
-            linux/amd64
-            linux/arm64
+#          platforms: |
+#            linux/amd64
+#            linux/arm64
           push: true
-          tags: "ghcr.io/albertattard/gourami-app:latest"
+          tags: ${{ env.REGISTRY }}/${{ github.actor }}/gourami-app:latest
