Try to fix CI/CD

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,9 @@ jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: read
-      packages: write
+#    permissions:
+#      contents: read
+#      packages: write
 
     steps:
       - name: Checkout the code
@@ -59,9 +59,11 @@ jobs:
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: |
+#          images: |
 #            ${{ env.REGISTRY }}/${{ github.repository }}
-            ${{ github.actor }}/${{ github.repository }}
+#            albertattard/gourami-app
+          images: |
+            albertattard/gourami-app
 
       - name: Build and push Docker image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
