--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jvm-test-suite'
     id 'org.springframework.boot' version '3.1.1'
     id 'io.spring.dependency-management' version '1.1.0'
 }
@@ -25,6 +26,7 @@ testing {
 
             dependencies {
                 implementation project()
+                implementation 'org.springframework.boot:spring-boot-starter-web'
             }
 
             targets {
